[package]
name = "todo_app_rust_json_simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
structopt = "0.3.26"

[dependencies.chrono]
features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
version = "0.4.24"

[dependencies.serde]  # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0.160"
